fix: card display on mobile

--- a/front/src/app/modules/search/pages/search/search-mobile/search-mobile.component.scss
+++ b/front/src/app/modules/search/pages/search/search-mobile/search-mobile.component.scss
@@ -24,12 +24,8 @@
     overflow: auto;
   }
 
-  &-cardsContainer{
-    justify-content: center;
-    &-card {
-      width: 300px;
+  &-cardsContainer-card {
       margin: 20px 30px;
-    }
   }
 
   &-message {
